# recommendation_2025

./: .gitignore  PREVIOUS_README.md  README.md  evaluate.py  main.py  metric.py  pyproject.toml  test.sh  train.py  train.sh
results/: amazon-out-MoviesAndTV-llama.json  amazon-out-MoviesAndTV-llama_metric.json  amazon-out-MoviesAndTV-mistral.json  amazon-out-TripAdvisor-llama.json  amazon-out-TripAdvisor-llama_metric.json  amazon-out-TripAdvisor-mistral.json
